Refactor data access.

--- a/FeatureConfig.Web/_Imports.razor
+++ b/FeatureConfig.Web/_Imports.razor
@@ -7,7 +7,5 @@
 @using Microsoft.JSInterop
 @using FeatureConfig.Web
 @using FeatureConfig.Web.Shared
-@using FeatureConfig.Web.Concrete
-@using FeatureConfig.Web.Contracts
-@using FeatureConfig.Web.Entities
-@using FeatureConfig.Web.DataAccess
+@using FeatureConfig.Data
+@using FeatureConfig.Data.Entities
