--- a/FeatureConfig.Web/Pages/FetchFeatureValue.razor
+++ b/FeatureConfig.Web/Pages/FetchFeatureValue.razor
@@ -1,4 +1,4 @@
-﻿@page "/featureValuelist"
+﻿@page "/features"
 @inject IFeatureRepository featureRepository
 
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -38,12 +38,8 @@ else
         <input type="text" id="txtSearch" placeholder="Search feature config..." class="form-control" @bind="SearchTerm" @bind:event="oninput" />
     </div>
     <table class="table table-bordered table-hover">
-        <thead>
+        <thead class="thead-dark">
             <tr>
-                <th class="sort-th" @onclick="@(() => SortTable("ID"))">
-                    ID
-                    <span class="fa @(SetSortIcon("ID"))"></span>
-                </th>
                 <th class="sort-th" @onclick="@(() => SortTable("Name"))">
                     Name
                     <span class="fa @(SetSortIcon("Name"))"></span>
@@ -68,21 +64,30 @@ else
             {
                 foreach (var featureValue in featureValues)
                 {
-        <tr>
-            <td>@featureValue.ID</td>
-            <td>@featureValue.Name</td>
-            <td>@featureValue.Value</td>
-            <td>
-                <a class="btn btn-primary" href='/editFeatureValue/@featureValue.ID'>Edit</a>  |
-                <a class="btn btn-danger" @onclick="() => DeleteFeatureValue(featureValue.ID)">Delete</a>
-            </td>
-        </tr>
+                    <tr>
+                        <td>@featureValue.Name</td>
+                        <td>@featureValue.Value</td>
+                        <td>
+                            <a class="btn" href='/editFeatureValue/@featureValue.ID'>
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                                </svg>
+                            </a>  |
+                            <a class="btn" @onclick="() => DeleteFeatureValue(featureValue.ID)">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                                </svg>
+                            </a>
+                        </td>
+                    </tr>
                 }
             }
 
         </tbody>
     </table>
-    <div class="pagination">
+    <div class="pagination pull-right">
         <button class="btn btn-custom" @onclick=@(async ()=>await NavigateToPage("previous"))>Prev</button>
 
         @for (int i = startPage; i <= endPage; i++)
