--- a/FeatureConfig.Web/Shared/NavMenu.razor
+++ b/FeatureConfig.Web/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="featureValuelist">
+            <NavLink class="nav-link" href="features">
                 <span class="oi oi-plus" aria-hidden="true"></span> Feature Config
             </NavLink>
         </li>       
